--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       padding: 100px 0;
       text-align: center;
       background: #111;
-      background-image: url('https://i.imgur.com/3JcBvSN.png');
+      background-image: url(tlo.png);
       background-size: cover;
       background-position: center;
       position: relative;
