--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 
     <section id="creators">
       <h2>Twórcy</h2>
-      <div class="creator-card">Szymon Mioduszewski &ndash; Projekt i programowanie</div>
-      <div class="creator-card">Bartosz Nowinowski &ndash; Grafika i animacje</div>
-      <div class="creator-card">Autor nieznany &ndash; Muzyka i dźwięki</div>
+      <div class="creator-card">Szymon Mioduszewski &ndash; Projekt, programowanie, design, strona internetowa</div>
+      <div class="creator-card">Bartosz Nowinowski &ndash; Grafika, animacje, fabuła, efekty dżwiękowe e</div>
+      <div class="creator-card">Zajebane z neta &ndash; Muzyka</div>
     </section>
 
     <section id="contact">
