--- a/index.html
+++ b/index.html
@@ -143,16 +143,16 @@
     <section id="gallery">
       <h2>Galeria</h2>
       <div class="row">
-        <div class="col-md-4"><img src="https://i.imgur.com/3JcBvSN.png" alt="Laboratorium" /></div>
-        <div class="col-md-4"><img src="https://i.imgur.com/yt9fqBP.png" alt="Czerwony Przycisk" /></div>
-        <div class="col-md-4"><img src="https://i.imgur.com/NbKlWjR.png" alt="Meta Wiadomości" /></div>
+        <div class="col-md-4"><img src="1.png" alt="Laboratorium" /></div>
+        <div class="col-md-4"><img src="2.png" alt="Czerwony Przycisk" /></div>
+        <div class="col-md-4"><img src="3.png" alt="Meta Wiadomości" /></div>
       </div>
     </section>
 
     <section id="creators">
       <h2>Twórcy</h2>
       <div class="creator-card">Szymon Mioduszewski &ndash; Projekt, programowanie, design, strona internetowa</div>
-      <div class="creator-card">Bartosz Nowinowski &ndash; Grafika, animacje, fabuła, efekty dżwiękowe e</div>
+      <div class="creator-card">Bartosz Nowinowski &ndash; Grafika, animacje, fabuła, efekty dżwiękowe</div>
       <div class="creator-card">Zajebane z neta &ndash; Muzyka</div>
     </section>
 
