--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <footer class="bg-black text-gray-500 py-12 px-8 text-sm text-center">
     <div class="mb-4">
       <a href="privacy-policy.html" class="mr-4 hover:text-white">Polityka prywatności</a> 
-      <a href="formularz.html" class="mr-4 hover:text-white">Kontakt</a>
+      <a href="kontakt.html" class="mr-4 hover:text-white">Kontakt</a>
       <a href="https://www.youtube.com/@GoodB_Studios" class="hover:text-white">YouTube</a> · 
       <a href="https://www.tiktok.com/@goodb_studios" class="hover:text-white">TikTok</a> · 
       <a href="https://discord.gg/W62gZR5d3a" class="hover:text-white">Discord</a>
